Configure mail send. Add mail tmpli.
P.114-119

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -34,5 +34,5 @@ monolog:
 assetic:
     use_controller: true
 
-#swiftmailer:
-#    delivery_address: me@example.com
+swiftmailer:
+    delivery_address: dev.yotsak83@gmail.com
