Auto mail notify of unprocessed inquiry
P187-190

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        url_base: %url_base%
 
 # Assetic Configuration
 assetic:
